# std-expected

./: .clang-format  .clang-tidy  CMakeLists.txt  LICENSE  README.md
cmake/: BcExpectedConfig.cmake
include/: CMakeLists.txt
include/bc/: expected.h
include/bc/exp/: expected.h
include/exp/: expected.h
test/: CMakeLists.txt  arg.h  bad_expected_access_test.cpp  comp.h  con.h  copy_assign_base_test.cpp  copy_base_test.cpp  err.h  expected_constexpr_test.cpp  expected_test.cpp  expected_void_constexpr_test.cpp  expected_void_test.cpp  move_assign_base_test.cpp  move_base_test.cpp  obj.h  obj_constexpr.h  obj_explicit.h  obj_implicit.h  obj_throw.h  obj_trivial.h  operations_base_test.cpp  state.h  storage_base_test.cpp  unexpected_constexpr_test.cpp  unexpected_test.cpp  union_access.h
